Fix max height for menu on smaller screens

--- a/theme_153957/static/css/style.css
+++ b/theme_153957/static/css/style.css
@@ -191,7 +191,10 @@ a:hover {
       'thumbnails'
       'canvas';
   }
-  max-height: initial;
+
+  #menu {
+    max-height: initial;
+  }
 }
 
 @media (pointer: coarse) {
